terraform/environments/dev/maplebank-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maplebank-api
  namespace: maplebank-dev
  labels:
    app: maplebank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: maplebank-api
  template:
    metadata:
      labels:
        app: maplebank-api
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: maplebank-api-sa
      containers:
        - name: maplebank-api
          image: maplebankacrdev099.azurecr.io/maplebank-api:v2
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 20
