terraform/environments/dev/maplebank-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: maplebank-api
  namespace: maplebank-dev

spec:
  selector:
    app: maplebank-api

  ports:
    - port: 80
      targetPort: 5000

  type: ClusterIP
